recent:
	fix input vs output thing in forwarding support for iptables

0.7:
	add "local" and "forward" syntax to state that packets are only
		for local or remote consumption (and "-h" option to
		default rules to the former)
	begin manpages
	add "-o" option to specify output file
	fix "make install"
	getopt()ify filtergen.c
	add "-l" option to minimise the number of rules for established
		connections, implemented for iptables backend
	add more stuff to the iptables skeleton
	warning fixups
	implement "local" and "forward" for iptables backend
	add "-r" option to mirror "-h"
	cleanup ipchains driver somewhat
	implement "local" for ipchains backend ("forward" is not possible)
	fix bug where accept would get lost from:
		input eth0 { ! dest bar drop; accept; };
	iptables and ipchains add "established packet" rules to head of chain
	add "proxy" as an alias for "redirect"

0.6:
	disable negation of conjunctions ("or"s, aka brace-grouping) for now
	add "no skeleton" option
	fix a couple of segfaults/aborts where input filter is invalid
	allow literal +, ", and _ signs in input
	add sub-groups -- where supported, large sub-sections can be moved
		out-of-line to improve performance

0.5: that's better
	much fixing of iptables driver.  Now shouldn't leak
	like the proverbial sieve

0.4: testing begins
	add transproxy and masquerading support
	fix syntax problems with iptables and ipchains output
	simple logging support (logs only initiating packets)
	rule checking -- ports only allowed with tcp or udp
	initial icmp support

0.3:
	add ipfilter backend
	fix yet another silly bug in main()
	add warning notice to cisco driver
	cisco driver supports port ranges now

0.2: Various improvements
	rewrote iptables driver
	added ipchains driver
	added beginnings of Cisco IOS ACL driver
		(see TODO for why this doesn't work yet)
	added TODO and HONESTY files

0.1: Initial release
	iptables driver
	a few bugs

$Id: HISTORY,v 1.29 2002/07/31 22:00:01 matthew Exp $